# RustPad

./: Cargo.toml  README.md
.github/workflows/: release-packages.yml
assets/: rustpad-icon.icns
packaging/aur/: .SRCINFO  PKGBUILD  rustpad.desktop
src/: app.rs  file_ops.rs  main.rs  menu.rs  message.rs  settings.rs  theme.rs
